# PriviTrade

./: README.md
app/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src/api/dataSource/: ContractApiDataSource.ts
app/src/components/dashboard/: index.tsx  sidebar.tsx
app/src/components/dashboard/perp-dex/: calimero-nodes.tsx  index.tsx  market-trades.tsx  overview.tsx  trading-chart.tsx  trading-interface.tsx
app/src/constants/: currencies.ts
app/src/lib/: types.ts
app/src/lib/stores/: dashboard-store.ts
app/src/pages/: landing-page.tsx
circuits/: Makefile  circuit.go  circuit.wasm  circuit_test.go  go.mod  main.go
contracts/: Cargo.toml  dfx.json
contracts/src/contracts/src/: dip20.rs  lib.rs
logic/: Cargo.toml  build.sh
logic/res/: increment.wasm
logic/src/: lib.rs
